<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyRoutine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Start Color Code -->

    <color name="col_drak_red">#dd3e45</color>
    <color name="col_drak_yellow">#ffc600</color>
    <color name="col_light_yellow">#d7b437</color>
    <color name="col_drak_fb_blue">#3c75b6</color>
    <color name="col_light_fb_blue">#81b4ee</color>
    <color name="col_dark_blue">#495f6e</color>
    <color name="col_light_blue">#81909d</color>
    <color name="col_white">#ffffff</color>
    <color name="col_light_gray">#efefef</color>
    <color name="col_dark_gray">#bec5ce</color>
    <color name="col_blue">#2e69f0</color>
    <color name="col_lightwhite">#c0bebe</color>
    <color name="col_light_blue_text">#ebf0f7</color>
    <color name="col_light_red">#fdc6c9</color>
    <color name="col_light_blu">#6e87b4</color>
    <color name="col_light_white">#eeeeee</color>
    <color name="col_light_text">#50555b</color>
    <color name="col_light_textbackground">#eef2f8</color>

    <!-- End Color Code -->


    <!-- Start switchboardactivity -->
    <string name="switchboardactivity_listTask">List Your Task</string>
    <string name="switchboardactivity_viewTask">View Task</string>
    <string name="switchboardactivity_historyTask">History</string>
    <!-- End switchboardactivity -->


    <!-- Start SwitchboardActivity -->
    <string name="switchboardActivity_AppName">Daily Routine</string>
    <string name="switchboardActivity_powered">Powered by JousterLabs</string>
    <!-- End SwitchboardActivity -->


    <!-- Start ListTaskActivity -->
    <string name="ListTaskActivity_back">Back</string>
    <string name="ListTaskActivity_title">Add your Daily Task</string>
    <string name="ListTaskActivity_work_Hint">Enter Daily Task</string>
    <string name="ListTaskActivity_work_place">Enter Place</string>
    <string name="ListTaskActivity_work_date_time">Enter Time</string>
    <string name="ListTaskActivity_work_date_date">Enter Date</string>
    <string name="ListTaskActivity_work_Remark">You Can Enter any Remark</string>
    <string name="ListTaskActivity_button_AddtoList">Add to List</string>
    <string name="ListTaskActivity_button_viewList">View List</string>
    <!-- End ListTaskActivity -->


    <!-- Start ViewTaskActivity -->
    <string name="ViewTaskActivity_back">Back</string>
    <string name="ViewTaskActivity_title">View Listed Task</string>
    <!-- End ViewTaskActivity -->
    
     <!-- Start HistoryTaskActivity -->
    <string name="HistoryTaskActivity_back">Back</string>
    <string name="HistoryTaskActivity_title">History</string>
    <!-- End HistoryTaskActivity -->
    


    <!-- Start viewtaskactivity_list_items -->
    <string name="viewtaskactivity_list_items_workName">Work Name</string>
    <string name="viewtaskactivity_list_items_workPlace">Work Place</string>
    <string name="viewtaskactivity_list_items_demo">Task not Updated Yet</string>
    <string name="viewtaskactivity_list_items_workDate">Work Date</string>
    <string name="viewtaskactivity_list_items_workTime">Work Time</string>
    <string name="viewtaskactivity_list_items_workRemark">Work Remark</string>
    <!-- End viewtaskactivity_list_items -->

</resources>