<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/col_drak_red"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linlay_ListTaskActivity_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_ListTaskActivity_back"
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:contentDescription="@null"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/textView_ListTaskActivity_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ListTaskActivity_back"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_ListTaskActivity_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ListTaskActivity_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/col_dark_gray" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_ListTaskActivity_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:hint="@string/ListTaskActivity_work_Hint" >
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:background="@color/col_drak_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_ListTaskActivity_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:hint="@string/ListTaskActivity_work_date_date"
                    android:inputType="datetime" />

                <ImageView
                    android:id="@+id/img_ListTaskActivity_datePic"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@null"
                    android:src="@android:drawable/ic_menu_today" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:background="@color/col_drak_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_ListTaskActivity_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:hint="@string/ListTaskActivity_work_date_time"
                    android:inputType="time" />

                <ImageView
                    android:id="@+id/img_ListTaskActivity_timePic"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@null"
                    android:src="@android:drawable/ic_menu_add" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:background="@color/col_drak_red" />

            <EditText
                android:id="@+id/et_ListTaskActivity_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:hint="@string/ListTaskActivity_work_place" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:background="@color/col_drak_red" />

            <EditText
                android:id="@+id/et_ListTaskActivity_remark"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="13dp"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="top"
                android:hint="@string/ListTaskActivity_work_Remark"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/col_drak_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/btn_ListTaskActivity_addToList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_drawable_fb"
            android:text="@string/ListTaskActivity_button_AddtoList"
            android:textColor="@color/col_drak_red" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/col_drak_red" />

        <Button
            android:id="@+id/btn_ListTaskActivity_viewTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_drawable_fb"
            android:text="@string/switchboardactivity_viewTask"
            android:textColor="@color/col_drak_red" />
    </LinearLayout>

</LinearLayout>