<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linlay_viewtaskactivity_list_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_viewtaskactivity_list_items_workName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/viewtaskactivity_list_items_workName"
                android:textColor="@color/col_drak_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_viewtaskactivity_list_items_workName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewtaskactivity_list_items_demo"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_viewtaskactivity_list_items_workPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/viewtaskactivity_list_items_workPlace"
                android:textColor="@color/col_drak_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_viewtaskactivity_list_items_workPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewtaskactivity_list_items_demo"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_viewtaskactivity_list_items_workDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/viewtaskactivity_list_items_workDate"
                android:textColor="@color/col_drak_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_viewtaskactivity_list_items_workDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewtaskactivity_list_items_demo"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_viewtaskactivity_list_items_workTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/viewtaskactivity_list_items_workTime"
                android:textColor="@color/col_drak_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_viewtaskactivity_list_items_workTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewtaskactivity_list_items_demo"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_viewtaskactivity_list_items_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/viewtaskactivity_list_items_workRemark"
                android:textColor="@color/col_drak_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_viewtaskactivity_list_items_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/viewtaskactivity_list_items_demo"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/cheb_viewtaskactivity_list_items_checkedItems"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:background="@drawable/unchecked" />
            
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/col_drak_red" />

</LinearLayout>