<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables,UselessParent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/col_drak_red"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linlay_HistoryTaskActivity_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_HistoryTaskActivity_back"
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:contentDescription="@null"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/textView_HistoryTaskActivity_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/HistoryTaskActivity_back"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_HistoryTaskActivity_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/HistoryTaskActivity_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/img_HistoryTaskActivity_delete"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:contentDescription="@null"
            android:src="@drawable/discard"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/pgr_HistoryTaskActivity_pleaseWait"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView_HistoryTaskActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:focusable="false" >
    </ListView>

    <TextView
        android:id="@+id/txt_HistoryTaskActivity_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/viewtaskactivity_list_items_demo"
        android:textColor="@color/col_drak_red" />

</LinearLayout>