<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:background="@android:drawable/alert_light_frame"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/col_drak_red"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linly_switchboardactivity_listTask"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/col_drak_red"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights,UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/imageView_switchboardactivity_listTask"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@null"
                    android:src="@drawable/stock_task" />

                <TextView
                    android:id="@+id/textView_switchboardactivity_listTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/switchboardactivity_listTask"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:id="@+id/linly_switchboardactivity_viewTask"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/imageView_switchboardactivity_viewTask"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@null"
                    android:src="@drawable/stock_task_assigned_to" />

                <TextView
                    android:id="@+id/textView_switchboardactivity_viewTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/switchboardactivity_viewTask"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:id="@+id/linly_switchboardactivity_historyTask"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/col_drak_red"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView_switchboardactivity_historyTask"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:src="@drawable/trashcan_full_old" />

            <TextView
                android:id="@+id/textView_switchboardactivity_historyTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/switchboardactivity_historyTask"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>